// Licensed to the Apache Software Foundation (ASF) under one or more
// contributor license agreements.  See the NOTICE file distributed with
// this work for additional information regarding copyright ownership.
// The ASF licenses this file to You under the Apache License, Version 2.0
// (the "License"); you may not use this file except in compliance with
// the License.  You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

/*
If you are changing this class, make sure to add --include_imports flag while generating the descriptor file
*/

syntax = "proto2";
package prototest;
option java_package = "org.apache.druid.data.input.protobuf";
option java_outer_classname = "ProtoTestEventWrapper";
import "google/protobuf/timestamp.proto";

message ProtoTestEvent {
    enum EventCategory {
        CATEGORY_ZERO = 0;
        CATEGORY_ONE = 1;
        CATEGORY_TWO = 2;
    }

    message Foo {
        required string bar = 1;
    }

    required EventCategory eventType = 1;
    required uint64 id = 2;
    required string timestamp = 3;
    optional uint32 someOtherId = 4;
    optional bool isValid = 5;
    optional string description = 6;

    optional float someFloatColumn = 7;
    optional uint32 someIntColumn = 8;
    optional uint64 someLongColumn = 9;
    optional Foo foo = 10;
    repeated Foo bar = 11;
    optional google.protobuf.Timestamp otherTimestamp = 12;
}
